# cubby

./: Cargo.toml  README.md
cubby_lib/: Cargo.toml
cubby_lib/src/: axum_ruma.rs  error.rs  file_manager.rs  lib.rs
cubby_macros/: Cargo.toml
cubby_macros/src/: lib.rs
cubby_server/: Cargo.toml
cubby_server/src/: api.rs  config.rs  main.rs  managers.rs  utils.rs
cubby_server/src/api/: appservice.rs  client.rs  federation.rs
cubby_server/src/api/client/: accounts.rs
cubby_server/src/api/client/accounts/: get_username_availability.rs  register.rs
cubby_server/src/managers/: dataframes.rs
src/: api.rs  config.rs  main.rs  managers.rs
src/api/client/: accounts.rs
src/managers/: dataframes.rs
