[package]
name = "cubby"
description = "A parquet-backed matrix homeserver"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1

[workspace.lints.rust]
missing_abi = "warn"
missing_docs = "warn"
noop_method_call = "warn"
unreachable_pub = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1}
as_conversions = "warn"
dbg_macro = "warn"
empty_structs_with_brackets = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
let_underscore_must_use = "warn"
map_err_ignore = "warn"
missing_docs_in_private_items = "warn"
negative_feature_names = "warn"
pub_without_shorthand = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_feature_names = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
rest_pat_in_fully_bound_structs = "warn"
str_to_string = "warn"
string_add = "warn"
string_slice = "warn"
string_to_string = "warn"
tests_outside_test_module = "warn"
undocumented_unsafe_blocks = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unwrap_used = "warn"
wildcard_dependencies = "warn"

[lints]
workspace = true

[dependencies]
ruma = { git = "https://github.com/ruma/ruma", branch = "main", features = [
    "client-api-s",
    "federation-api-s",
    "compat"
] }
polars = { version = "0.40.0", features = [
    # Performance optimizations
    "performant",
    # Required for SIMD optimizations
    "nightly",
    # The Lazy API is used for query plan optimizations
    "lazy",
    # Using categorical data gets us better cache efficiency than raw strings
    "dtype-categorical",
    # Enable reading from parquet files
    "parquet"
] }
tikv-jemallocator = {  version = "0.5.4", optional = true }
axum = { version = "0.7.5", features = ["http2"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing-subscriber = "0.3.18"

[features]
jemalloc = ["dep:tikv-jemallocator"]
