[package]
name = "cubby"
description = "A parquet-backed matrix homeserver"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
ruma = { git = "https://github.com/ruma/ruma", branch = "main", features = [
    "client-api-s",
    "federation-api-s",
    "compat",
    "appservice-api-s"
] }
polars = { version = "0.40.0", features = [
    # Performance optimizations
    "performant",
    # Required for SIMD optimizations
    "nightly",
    # The Lazy API is used for query plan optimizations
    "lazy",
    # Using categorical data gets us better cache efficiency than raw strings
    "dtype-categorical",
    # Enable reading from parquet files
    "parquet",
    "strings"
] }
tikv-jemallocator = {  version = "0.5.4", optional = true }
axum = { version = "0.7.5", features = ["http2"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
figment = { version = "0.10.19", features = ["toml", "env"] }
once_cell = "1.19.0"
cubby_macros = { path = "../cubby_macros" }
cubby_lib = { path = "../cubby_lib" }
tempdir = "0.3.7"
parking_lot = "0.12.3"
bytes = "1.6.0"
rand = "0.8.5"
regex = "1.10.5"
crossbeam-channel = "0.5.13"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}

[features]
jemalloc = ["dep:tikv-jemallocator"]
